<resources>
    <string name="app_name">NFCDroid</string>
    <string name="title_settings">Settings</string>
    <string name="title_scan">Scan</string>
    <string name="title_tags">Tags</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_tap_message">Tap a NFC tag against the phone</string>
    <string name="scan_tag_type">Tag type</string>
    <string name="scan_technologies">Technologies</string>
    <string name="scan_memory_information">Memory space</string>
    <string name="scan_data_format">Data format</string>
    <string name="scan_tag_name">Tag name</string>
    <string name="tags_no_nfc_tags_yet">No NFC tags scanned  yet</string>
    <string name="export">export</string>
    <string name="write_to_tag">write to tag</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="about">About</string>
    <string name="developers">Developers</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="history">History</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="icons">Icons kindly provided by Icons8</string>
    <string name="add_record">Add a record</string>
    <string name="more_options">More options</string>
    <string name="save">Save</string>
    <string name="nfc_logo_description">NFC logo</string>
    <string name="nfc_disabled">It seems like NFC is not currently enabled\n\nTo use most features this App provides, you should enable NFC</string>
    <string name="nfc_not_available">It seems like your device does not support NFC</string>
    <string name="nfc_disabled_title">NFC Disabled</string>
    <string name="nfc_not_available_title">NFC Not Supported</string>
    <string name="nfc_tag_write_protected">This NFC tag is read-only</string>
    <string name="nfc_tag_write_failed">Write Failed</string>
    <string name="no_write_description">no writing possible</string>
    <string name="not_enough_space">The NFC tag does not have enough space to store this</string>
    <string name="not_enough_storage_description">not enough storage</string>
    <string name="nfc_writing_successful">Data successfully written</string>
    <string name="success">success</string>
    <string name="nfc_write_disconnected">The tag was disconnected during the write process</string>
    <string name="error_description">error</string>
    <string name="unknown_error_occured">A unknown error occured</string>
    <string name="memory_information">Memory space</string>
    <string name="tag_id">Tag ID</string>
    <string name="org.nfcorum.ndef.type1">NFC Forum Type 1</string>
    <string name="org.nfcorum.ndef.type2">NFC Forum Type 2</string>
    <string name="org.nfcorum.ndef.type3">NFC Forum Type 3</string>
    <string name="org.nfcorum.ndef.type4">NFC Forum Type 4</string>
    <string name="com.nxp.ndef.mifareclassic">MIFARE Classic</string>
    <string name="com.nxp.ndef.icodesli">iCODE SLI</string>
    <string name="android.ndef.unknown">Unknown</string>
    <string name="writable">Editable</string>
    <string name="not_writable">Not editable</string>
    <string name="bytes">bytes</string>
    <string name="atqa">ATQA</string>
    <string name="a_image">a image</string>
    <string name="sak">SAK</string>
    <string name="editable">Editable</string>
    <string name="can_make_read_only">Can be made read-only</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_tag">Save tag</string>
    <string name="tag_details">Tag details</string>
    <string name="tag_data">Tag data</string>
    <string name="name_required">You must specify a name to save this tag</string>
    <string name="emulate">Emulate</string>
    <string name="name_must_be_unique">There already exists a Tag with this name</string>
    <string name="tag_must_not_be_empty">A Tag must contain data in order to be saved</string>
    <string name="no_data_found">No data found</string>
    <string name="tag_number_of_records">Number of records:</string>
    <string name="tag_size">Size:</string>
    <string name="add_data">Add Data</string>
    <string name="text">Text</string>
    <string name="add_plain_text">Add Plain Text to the Tag</string>
    <string name="website_link">Website Link</string>
    <string name="add_website_link">Add a Link to a Website to the Tag</string>
    <string name="android_app">Android App</string>
    <string name="add_android_app">Add a Link to a Android App to the Tag</string>
    <string name="contact">Contact</string>
    <string name="add_contact">Add one of your Contacts to the Tag</string>
    <string name="location">Location</string>
    <string name="add_location">Add a Location to the Tag</string>
    <string name="wifi_network">Wi-Fi Network</string>
    <string name="add_wifi_network">Add a Wi-Fi Network Configuration to the Tag</string>
    <string name="bluetooth_connection">Bluetooth Connection</string>
    <string name="add_bluetooth_connection">Add a Bluetooth connection to the Tag</string>
    <string name="custom_data">Custom Data</string>
    <string name="add_custom_data">Add custom Data to the Tag</string>
    <string name="cancel">Cancel</string>
    <string name="enter_text">Enter your Text</string>
    <string name="enter_link">Enter a Link</string>
    <string name="link_example">http://www.example.com</string>
    <string name="enter_app">Enter an Apps full Name</string>
    <string name="android_app_full_name">com.example.app</string>
    <string name="address">Address</string>
    <string name="add_location_address">Add a Location based on an Address to the Tag</string>
    <string name="enter_address">Enter an Address</string>
    <string name="address_hint">711-2880 Nulla St. Mankato Mississippi 96522</string>
    <string name="could_not_determine_location">Could not determine Location\n\nAre you connected to the internet?\nDid you enter a valid address?</string>
    <string name="determine_location_failed">Determining Location failed</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="example_geo">123.456</string>
    <string name="enter_location">Enter a Location</string>
    <string name="invalid_location">The given Location is not valid</string>
    <string name="invalid_location_headline">Invalid Location</string>
    <string name="enter_data">Enter your Data</string>
    <string name="content_type">Content Type:</string>
    <string name="plain">plain</string>
    <string name="lowercase_text">text</string>
    <string name="data_headline">Data:</string>
    <string name="hello">Hello</string>
    <string name="error_while_parsing_mime_type">Invalid Data\n\nError while parsing MIME Type</string>
    <string name="invalid_data">Invalid Data</string>
    <string name="update_location">Update Location</string>
    <string name="could_not_get_location">Retrieving location failed\n\nAre you connected?</string>
    <string name="tap_tag_against_phone">Please tap a NFC Tag against the phone</string>
    <string name="write_nfc">Write data to NFC Tag</string>
    <string name="delete">Delete</string>
    <string name="licenses">Licenses</string>
    <string name="icons8">Icons by Icons8</string>
    <string name="source_code">Source Code</string>
    <string name="behavior">Behavior</string>
    <string name="display_notifications">Display Notifications</string>
    <string name="data_written">Data Written</string>
    <string name="data_written_detail">The Data was successfully written onto the NFC Tag</string>
    <string name="invalid_app_name_headline">Invalid App Name</string>
    <string name="invalid_link">Invalid Link</string>
    <string name="please_enter_value">Please enter a Value</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="gpl3">GNU GENERAL PUBLIC LICENSE\nVersion 3, 29 June 2007</string>
</resources>