<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <FrameLayout
        android:id="@+id/frag_display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#F3F3F3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/tab_tags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_tab_tags"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/icons8_credit_card_96" />

            <TextView
                android:id="@+id/text_tab_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_tags" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_tab_scan"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/icons8_nfc_96" />

            <TextView
                android:id="@+id/text_tab_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_scan" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_tab_settings"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/icons8_settings" />

            <TextView
                android:id="@+id/text_tab_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_settings" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>